<?xml version="1.0"?>
<package format="2">
  <name>laser_to_cloud_converter</name>
  <version>0.0.1</version>
  <description>The laser_to_cloud_converter package</description>

  <maintainer email
  ="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>laser_geometry</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>laser_geometry</exec_depend>

</package>